--- a/client-app/src/App.css
+++ b/client-app/src/App.css
@@ -1,29 +1,59 @@
 .container {
   display: flex;
+  flex-direction: column;
   height: 100vh;
 }
 
-/* Left panel styling */
-.left-panel {
-  width: 50%;
-  padding: 20px;
-  background-color: #f0f0f0;
-  border-right: 1px solid #ccc;
+.upper {
+  display: flex;
+  flex: 1;
+  width: 100%;
 }
 
-/* Right panel styling */
-.right-panel {
-  width: 45%;
-  padding: 20px;
-  background-color: #fff;
+.left-section .right-section {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+.right-section {
+  width: 50%;
+  overflow: auto;
+  max-height: 70vh;
+}
+
+.left-section {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.json-view {
+  overflow: auto;
+  height: 100%;
+  font-size: small;
+  line-height: 1;
+  background-color: black;
 }
 
 .console {
-  height: 80%;
+  height: 30vh;
   background-color: #000;
   color: #0f0;
   padding: 10px;
   overflow-y: auto;
   font-family: monospace;
   border: 1px solid #333;
+}
+
+button {
+  width: 200px;
+  margin: 5px;
+}
+
+.json-view-str-val {
+  color: #0f0;
 }
